@@ -8,5 +8,6 @@
 #cmakedefine QTC_DISABLE_KDEFILEDIALOG_CALLS
 #cmakedefine QTC_XBAR_SUPPORT
 #cmakedefine QTC_QT_ONLY
+#cmakedefine QTC_OLD_NVIDIA_ARROW_FIX
 
 #endif
